src/objects/Repayment_Schedule__c.object
<CustomObject>
    <description>When a user creates a loan account for a client, he first identifies the client and selects a loan product from the list of products available for the client. 
On the next page, the default values for that loan product are displayed, which the user may change for the new loan account, according to the ranges indicated in parentheses next to the fields on the page. Automatic administrative fees associated with the account are displayed, and the user can apply up to three additional fees to the loan.
When the loan is approved, an installment schedule is displayed. It is based on the loan amount, interest rate, repayment frequency, and the number of installments specified.</description>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Principal Balance</description>
        <inlineHelpText>Principal Balance</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barcode_Subtype__c</fullName>
        <label>Barcode Subtype</label>
        <picklist>
            <controllingField>Barcode_Type__c</controllingField>
            <picklistValues>
                <fullName>128A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barcode_Type__c</fullName>
        <label>Barcode Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code128</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>code39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ean13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Date paid</description>
        <inlineHelpText>Date paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due date</description>
        <inlineHelpText>Due date</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest On Overdue Amount</description>
        <inlineHelpText>Due Interest On Overdue Amount</inlineHelpText>
        <label>Due Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest</description>
        <inlineHelpText>Due Interest</inlineHelpText>
        <label>Due Interest</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Principal</description>
        <inlineHelpText>Due Principal</inlineHelpText>
        <label>Due Principal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Snapshot__c</fullName>
        <label>Installment Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Its the interest accrued on a daily basis, but not due until the due date.</description>
        <inlineHelpText>Its the interest accrued on a daily basis, but not due until the due date.</inlineHelpText>
        <label>Interest Accrued Not Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</description>
        <inlineHelpText>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partially_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this scheduled installment is only partially paid.</description>
        <inlineHelpText>Indicates if this scheduled installment is only partially paid.</inlineHelpText>
        <label>Is Partially Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <description>Repayment Schedule of which Loan account</description>
        <inlineHelpText>Repayment Schedule of which Loan account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Repayment Schedule</relationshipLabel>
        <relationshipName>Repayment_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Fees</description>
        <inlineHelpText>Paid Fees</inlineHelpText>
        <label>Paid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest On Overdue Amount</description>
        <inlineHelpText>Paid Interest On Overdue Amount</inlineHelpText>
        <label>Paid Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest</description>
        <inlineHelpText>Paid Interest</inlineHelpText>
        <label>Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Principal</description>
        <inlineHelpText>Paid Principal</inlineHelpText>
        <label>Paid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Total__c</fullName>
        <formula>Total_Paid_Fees__c +  Paid_Interest__c +  Paid_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Due_Fees__c</fullName>
        <label>Total Due Fees</label>
        <summarizedField>Due_Fee__c.Due_Fee_Amount__c</summarizedField>
        <summaryForeignKey>Due_Fee__c.Repayment_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Installment__c</fullName>
        <formula>Due_Principal__c + Due_Interest__c + Total_Due_Fees__c +  Due_Interest_On_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Fees__c</fullName>
        <label>Total Paid Fees</label>
        <summarizedField>Paid_Fee__c.Paid_Fee_Amount__c</summarizedField>
        <summaryForeignKey>Paid_Fee__c.Repayment_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This represents the amount paid by the borrower towards this repayment schedule.</description>
        <inlineHelpText>This represents the amount paid by the borrower towards this repayment schedule.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Fees__c</fullName>
        <formula>Total_Due_Fees__c - Total_Paid_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Installment__c</fullName>
        <formula>Unpaid_Principal__c + Unpaid_Interest__c + Unpaid_Fees__c + Unpaid_Overdue_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Interest__c</fullName>
        <formula>Due_Interest__c  -  Paid_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Overdue_Interest__c</fullName>
        <formula>Due_Interest_On_Overdue__c - Paid_Interest_On_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Principal__c</fullName>
        <formula>Due_Principal__c - Paid_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the scheduled payment is/was completely paid</description>
        <inlineHelpText>Checked if the scheduled payment is/was completely paid</inlineHelpText>
        <label>is Paid</label>
        <type>Checkbox</type>
    </fields>
    <label>Repayment Schedule</label>
    <nameField>
        <displayFormat>RSI-{0000000000}</displayFormat>
        <label>Repayment Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>